#121 add left drawable, replace some png icons with xml, add layout files for new VM's and cells, code cleanup

--- a/ThePage/src/ThePage.Droid/Resources/layout/cell_base_clickabletext.xml
+++ b/ThePage/src/ThePage.Droid/Resources/layout/cell_base_clickabletext.xml
@@ -4,5 +4,6 @@
     style="@style/clickableText"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="4dp"
+    android:paddingTop="20dp"
+    android:drawablePadding="8dp"
     local:MvxBind="Text Label;Click CommandClick;DrawableLeft Icon;"/>
