--- a/ThePage/src/ThePage.Droid/Resources/layout/item_book.axml
+++ b/ThePage/src/ThePage.Droid/Resources/layout/item_book.axml
@@ -10,24 +10,29 @@
 	android:layout_height="wrap_content">
 	<TextView
 		android:id="@+id/lblName"
-		android:layout_width="match_parent"
+		android:layout_width="0dp"
 		android:layout_height="wrap_content"
 		android:textSize="20dp"
+		local:layout_constraintStart_toStartOf="parent"
+		local:layout_constraintEnd_toStartOf="@+id/imgArrow"
 		local:layout_constraintTop_toTopOf="parent"
 		local:layout_constraintBottom_toTopOf="@+id/lblAuthor"
 		local:MvxBind="Text Title" />
 	<TextView
 		android:id="@+id/lblAuthor"
-		android:layout_width="match_parent"
+		android:layout_width="0dp"
 		android:layout_height="wrap_content"
 		android:textSize="14dp"
+		local:layout_constraintStart_toStartOf="parent"
+		local:layout_constraintEnd_toStartOf="@+id/imgArrow"
 		local:layout_constraintTop_toBottomOf="@+id/lblName"
 		local:layout_constraintBottom_toBottomOf="parent"
 		local:MvxBind="Text Author.Name" />
 	<ImageView
+		android:id="@+id/imgArrow"
 		android:layout_width="30dp"
 		android:layout_height="30dp"
-		android:src="@drawable/ic_arrow_right"
+		android:src="@drawable/ic_chevron_right"
 		local:layout_constraintTop_toTopOf="@+id/lblName"
 		local:layout_constraintBottom_toBottomOf="@id/lblAuthor"
 		local:layout_constraintEnd_toEndOf="parent" />
