#148 add scrollListener, update views and fragments to handle scrollListener, code cleanup, add info icon, update interaction to show info toast

--- a/ThePage/src/ThePage.Droid/Resources/layout/fragment_author.axml
+++ b/ThePage/src/ThePage.Droid/Resources/layout/fragment_author.axml
@@ -15,6 +15,7 @@
         local:layout_constraintBottom_toBottomOf="parent"
         local:layout_constraintEnd_toEndOf="parent" />
     <MvxRecyclerView
+        android:id="@+id/lstItems"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="10dp"
