--- a/ThePage/src/ThePage.Droid/Resources/layout/fragment_author_select.axml
+++ b/ThePage/src/ThePage.Droid/Resources/layout/fragment_author_select.axml
@@ -15,6 +15,7 @@
         local:layout_constraintEnd_toEndOf="parent"
         local:MvxBind="Click CommandAddItem"/>
     <MvxRecyclerView
+        android:id="@+id/lstItems"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         local:MvxItemTemplate="@layout/cell_author_select_item"
