--- a/ThePage/src/ThePage.Droid/Resources/layout/fragment_genre.axml
+++ b/ThePage/src/ThePage.Droid/Resources/layout/fragment_genre.axml
@@ -15,6 +15,7 @@
         local:layout_constraintBottom_toBottomOf="parent"
         local:layout_constraintEnd_toEndOf="parent" />
     <MvxRecyclerView
+        android:id="@+id/lstItems"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="10dp"
