--- a/ThePage/src/ThePage.Droid/Resources/layout/cell_base_textview.xml
+++ b/ThePage/src/ThePage.Droid/Resources/layout/cell_base_textview.xml
@@ -11,6 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="14dp"
+        android:maxLines="1"
+        android:inputType="text"
         local:MvxBind="Text TxtInput;Visibility Visibility(IsEdit)"/>
     <TextView
         android:id="@+id/lblValue"
