--- a/ThePage/src/ThePage.Droid/Resources/layout/fragment_addgenre.axml
+++ b/ThePage/src/ThePage.Droid/Resources/layout/fragment_addgenre.axml
@@ -20,6 +20,8 @@
         android:id="@+id/txtName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:maxLines="1"
+        android:inputType="text"
         local:layout_constraintBottom_toTopOf="@+id/btnAdd"
         local:layout_constraintEnd_toEndOf="parent"
         local:layout_constraintStart_toStartOf="parent"
