--- a/ThePage/src/ThePage.Droid/Resources/layout/fragment_authordetail.axml
+++ b/ThePage/src/ThePage.Droid/Resources/layout/fragment_authordetail.axml
@@ -32,6 +32,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="20sp"
+        android:maxLines="1"
+        android:inputType="text"
         local:layout_constraintTop_toBottomOf="@+id/lblNameValue"
         local:layout_constraintBottom_toTopOf="@+id/btnUpdate"
         local:layout_constraintStart_toStartOf="parent"
