--- a/ThePage/src/ThePage.Droid/Resources/layout/cell_book_genre_item.axml
+++ b/ThePage/src/ThePage.Droid/Resources/layout/cell_book_genre_item.axml
@@ -4,19 +4,19 @@
 	xmlns:local="http://schemas.android.com/apk/res-auto"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
+	android:layout_marginTop="8dp"
+	android:background="@drawable/grey_border"
 	android:clickable="true"
-	android:focusableInTouchMode="true"
 	android:padding="4dp"
     local:MvxBind="Click If(IsEdit, DeleteCommand)">
-
 	<TextView
 		android:id="@+id/txtInput"
 		android:layout_width="0dp"
 		android:layout_height="wrap_content"
+		android:drawableTint="@color/primaryColor"
 		local:layout_constraintTop_toBottomOf="@+id/lblAuthor"
 		local:layout_constraintBottom_toTopOf="@+id/lblValue"
 		local:layout_constraintStart_toStartOf="parent"
-		local:layout_constraintWidth_percent="0.5"
+		local:layout_constraintEnd_toEndOf="parent"
 		local:MvxBind="Text Genre.Name;DrawableRight If(IsEdit, 'ic_delete', '')"/>
-
 </android.support.constraint.ConstraintLayout>
