--- a/ThePage/src/ThePage.Droid/Resources/layout/cell_book_textview.axml
+++ b/ThePage/src/ThePage.Droid/Resources/layout/cell_book_textview.axml
@@ -8,7 +8,6 @@
     android:focusableInTouchMode="true"
     android:layout_marginTop="10dp"
     android:padding="4dp">
-
     <TextView
         android:id="@+id/lblTitle"
         android:layout_width="wrap_content"
@@ -18,19 +17,17 @@
         local:layout_constraintBottom_toTopOf="@+id/txtInput"
         local:layout_constraintStart_toStartOf="parent"
         local:MvxBind="Text LblTitle"/>
-
     <EditText
         android:id="@+id/txtInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:maxLines="1"
-        android:inputType="text"
+        android:inputType="textCapWords"
         local:layout_constraintTop_toBottomOf="@+id/lblTitle"
         local:layout_constraintBottom_toTopOf="@+id/lblValue"
         local:layout_constraintEnd_toEndOf="parent"
         local:layout_constraintStart_toStartOf="parent"
         local:MvxBind="Text TxtInput;Visibility Visibility(IsEdit)"/>
-
     <TextView
         android:id="@+id/lblValue"
         android:layout_width="wrap_content"
@@ -39,5 +36,4 @@
         local:layout_constraintBottom_toBottomOf="parent"
         local:layout_constraintStart_toStartOf="parent"
         local:MvxBind="Text TxtInput;Visibility InvertedVisibility(IsEdit)"/>
-
 </android.support.constraint.ConstraintLayout>
