--- a/ThePage/src/ThePage.Droid/Resources/layout/cell_book_textview.axml
+++ b/ThePage/src/ThePage.Droid/Resources/layout/cell_book_textview.axml
@@ -23,6 +23,7 @@
         android:layout_height="wrap_content"
         android:maxLines="1"
         android:inputType="textCapWords"
+        android:imeOptions="actionDone"
         local:layout_constraintTop_toBottomOf="@+id/lblTitle"
         local:layout_constraintBottom_toTopOf="@+id/lblValue"
         local:layout_constraintEnd_toEndOf="parent"
