--- a/ThePage/src/ThePage.Droid/Resources/layout/cell_googlebook.xml
+++ b/ThePage/src/ThePage.Droid/Resources/layout/cell_googlebook.xml
@@ -5,26 +5,26 @@
     android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingLeft="10dp"
-    android:paddingTop="10dp"
-    android:paddingRight="10dp">
+    android:padding="10dp"
+    android:elevation="3dp"
+    android:layout_margin="10dp">
     <ImageView
         android:id="@+id/image"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:scaleType="center"
+        android:layout_height="130dp"
+        android:adjustViewBounds="true"
+        android:scaleType="fitCenter"
         local:layout_constraintStart_toStartOf="parent"
         local:layout_constraintTop_toTopOf="parent"
-        local:layout_constraintBottom_toBottomOf="parent"
         local:MvxBind="Url ImageUri"/>
     <TextView
         android:id="@+id/lblKey"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:textSize="20dp"
+        android:textSize="18dp"
         local:layout_constraintStart_toEndOf="@id/image"
-        local:layout_constraintTop_toTopOf="parent"
+        local:layout_constraintTop_toTopOf="@id/image"
         local:layout_constraintEnd_toEndOf="parent"
         local:layout_constraintBottom_toTopOf="@id/lblValue"
         local:MvxBind="Text Title"/>
@@ -34,15 +34,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:textSize="14dp"
-        android:paddingBottom="10dp"
         local:layout_constraintStart_toEndOf="@id/image"
         local:layout_constraintTop_toBottomOf="@id/lblKey"
         local:layout_constraintEnd_toEndOf="parent"
-        local:layout_constraintBottom_toBottomOf="parent"
         local:MvxBind="Text Author"/>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/primaryColor"
-        local:layout_constraintBottom_toBottomOf="parent"/>
 </android.support.constraint.ConstraintLayout>
