--- a/ThePage/src/ThePage.Droid/Resources/layout/item_book.axml
+++ b/ThePage/src/ThePage.Droid/Resources/layout/item_book.axml
@@ -8,32 +8,43 @@
 	android:padding="5dp"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content">
-	<TextView
-		android:id="@+id/lblName"
-		android:layout_width="0dp"
-		android:layout_height="wrap_content"
-		android:textSize="20dp"
-		local:layout_constraintStart_toStartOf="parent"
-		local:layout_constraintEnd_toStartOf="@+id/imgArrow"
-		local:layout_constraintTop_toTopOf="parent"
-		local:layout_constraintBottom_toTopOf="@+id/lblAuthor"
-		local:MvxBind="Text Title" />
-	<TextView
-		android:id="@+id/lblAuthor"
-		android:layout_width="0dp"
-		android:layout_height="wrap_content"
-		android:textSize="14dp"
-		local:layout_constraintStart_toStartOf="parent"
-		local:layout_constraintEnd_toStartOf="@+id/imgArrow"
-		local:layout_constraintTop_toBottomOf="@+id/lblName"
-		local:layout_constraintBottom_toBottomOf="parent"
-		local:MvxBind="Text Author.Name" />
+	<ImageView
+        android:id="@+id/image"
+        android:layout_width="85dp"
+        android:layout_height="130dp"
+        android:adjustViewBounds="true"
+        android:scaleType="fitCenter"
+		android:src="@drawable/book_cover"
+        local:layout_constraintStart_toStartOf="parent"
+        local:layout_constraintTop_toTopOf="parent"
+        local:MvxBind="Url ImageUri"/>
+    <TextView
+        android:id="@+id/lblName"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:textSize="18dp"
+        local:layout_constraintStart_toEndOf="@id/image"
+        local:layout_constraintTop_toTopOf="@id/image"
+        local:layout_constraintEnd_toEndOf="parent"
+        local:layout_constraintBottom_toTopOf="@id/lblAuthor"
+        local:MvxBind="Text Title"/>
+    <TextView
+        android:id="@+id/lblAuthor"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:textSize="14dp"
+        local:layout_constraintStart_toEndOf="@id/image"
+        local:layout_constraintTop_toBottomOf="@id/lblName"
+        local:layout_constraintEnd_toStartOf="@+id/imgArrow"
+        local:MvxBind="Text Author.Name"/>
 	<ImageView
 		android:id="@+id/imgArrow"
 		android:layout_width="30dp"
 		android:layout_height="30dp"
 		android:src="@drawable/ic_chevron_right"
-		local:layout_constraintTop_toTopOf="@+id/lblName"
-		local:layout_constraintBottom_toBottomOf="@id/lblAuthor"
+		local:layout_constraintTop_toTopOf="parent"
+		local:layout_constraintBottom_toBottomOf="parent"
 		local:layout_constraintEnd_toEndOf="parent" />
 </android.support.constraint.ConstraintLayout>
